--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "cross-fetch": "^3.1.5",
-    "express": "^4.18.0",
+    "express": "^4.18.1",
     "next": "12.1.4",
     "node-fetch": "^3.2.3",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
